Add new property "package"

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,5 +2,6 @@ description=Scala Project Using sbt
 
 name=Scala Project
 organization=org.example
+package=org.example.scalaproject
 version=0.1-SNAPSHOT
 scala_version=2.9.2
